--- a/ysiwebsite.css
+++ b/ysiwebsite.css
@@ -2,7 +2,7 @@ title{
   text-align: center;
   text-size: 48px;
 }
-about-description{
+aboutstatement{
   margin-left:100px;
   margin-right:100px;
   text-size: 24px;
