--- a/ysiwebsite.css
+++ b/ysiwebsite.css
@@ -1,8 +1,8 @@
-title{
+.title{
   text-align: center;
   text-size: 48px;
 }
-aboutstatement{
+.aboutstatement{
   margin-left:100px;
   margin-right:100px;
   text-size: 24px;
