--- a/ysiwebsite.css
+++ b/ysiwebsite.css
@@ -56,7 +56,7 @@
 }
 
 .card {
-  background-color: white;
+  background-color: Lightpink;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 20px;
