--- a/ysiwebsite.css
+++ b/ysiwebsite.css
@@ -79,6 +79,30 @@
   line-height: 1.5;
 }
 
+/*statbox*/
+.stat-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 40px 0;
+}
+
+.stat {
+  text-align: center;
+  width: 120px;
+}
+
+.stat h3 {
+  font-size: 32px;
+  color: #1a73e8;
+}
+
+.stat p {
+  font-size: 14px;
+  color: #555;
+}
+
 
 ul {
   list-style-type: none; 
