--- a/ysiwebsite.css
+++ b/ysiwebsite.css
@@ -98,15 +98,6 @@
   line-height: 1.5;
 }
 
-/*statbox*/
-.stat-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin: 40px 0;
-}
-
 .stat {
   text-align: center;
   width: 120px;
@@ -127,6 +118,56 @@
   max-width: 100%;
   width: 600px; 
   margin: 0 auto;
+}
+
+.title {
+  font-size: 48px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.stat-box {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 40px 0;
+}
+
+.stat {
+  text-align: center;
+  margin: 20px;
+}
+
+.stat h2 {
+  font-size: 72px;
+  font-weight: 900;
+  margin: 10px 0;
+}
+
+.stat h4 {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .stat h2 {
+    font-size: 48px;
+  }
+
+  .stat h4 {
+    font-size: 18px;
+  }
+
+  .title {
+    font-size: 36px;
+  }
+
+  .stat-box {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 
