--- a/ysiwebsite.css
+++ b/ysiwebsite.css
@@ -122,6 +122,9 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 40px 0;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .stat {
